# libqes

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.manual  README.md  configure.ac  scratch
cmake-modules/: CodeCoverage.cmake
include/: kmautolev.h  kmbase.h  kmfile.h  kmlib.h  kmmatch.h  kmseq.h  kmtest.h  kmutil.h  match.h
sandbox/afl/: Makefile  benchmarks.c  kseq.h  qes_config.h
sandbox/afl/in/: test.fasta  test.fastq
src/: CMakeLists.txt  Makefile.am  kmautolev.c  kmbase.h  kmbuffer.c  kmdnatrie.c  kmdnatrie.h  kmfile.c  kmfile.h  kmlib.h  kmmatch.c  kmmatch.h  kmseq.c  kmseq.h  kmseqfile.c  kmseqfile.h  kmsequtil.c  kmsequtil.h  kmstr.c  kmstr.h  kmtest.h  kmutil.c  kmutil.h  kmzfile.c  kmzfile.h  kmzfileul.c  main.c  match.c  qes.h  qes_compat.c  qes_compat.h  qes_config.h.in  qes_error.c  qes_error.h  qes_file.c  qes_file.h  qes_libgnu.c  qes_libgnu.h  qes_log.c  qes_log.h  (+12 more)
test/: CMakeLists.txt  Makefile  Makefile.am  benchmarks.c  helpers.c  helpers.h  logdemo.c  main.c  test.c  test_file.c  test_helpers.c  test_log.c  test_match.c  test_seq.c  test_seqfile.c  test_sequtil.c  test_util.c  test_zfile.c  testdata.c  testdata.h  tests.h
util/: make_codon_list.py
