file(GLOB LIBQES_SOURCES *.c)

# Targets
ADD_LIBRARY(qes_static STATIC ${LIBQES_SOURCES})
SET_TARGET_PROPERTIES(qes_static PROPERTIES OUTPUT_NAME qes)
ADD_LIBRARY(qes SHARED ${LIBQES_SOURCES})

FILE(GLOB LIBQES_HEADERS ${CMAKE_SOURCE_DIR}/src/*.h)
INSTALL(FILES ${LIBQES_HEADERS} DESTINATION "include")
INSTALL(TARGETS qes qes_static DESTINATION "lib")
